// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`claim dep characterization > direct fee-juice (private): builder gets the ENVELOPE salt, never the journal copy 1`] = `
[
  [
    "fuelClaim.buildFuelClaimInteraction",
    {
      "id": "<id>",
      "maxFeesPerGas": {
        "feePerDaGas": 10n,
        "feePerL2Gas": 20n,
      },
      "minFloorFj": 1000n,
      "resolvedSalt": "0xenvelopesalt",
      "resolvedSecret": undefined,
    },
  ],
]
`;

exports[`claim dep characterization > direct fee-juice (public): builder gets RAW predicted-worst fees + top-level secret 1`] = `
[
  [
    "fuelClaim.buildFuelClaimInteraction",
    {
      "id": "<id>",
      "maxFeesPerGas": {
        "feePerDaGas": 10n,
        "feePerL2Gas": 20n,
      },
      "minFloorFj": 1000n,
      "resolvedSalt": undefined,
      "resolvedSecret": "0xsecrethex",
    },
  ],
]
`;

exports[`claim dep characterization > no-fuel private token: claim_private, wallet-picker fee 1`] = `
[
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "aztec.executeUtility.balance_of",
    undefined,
  ],
  [
    "bridge.claim_private.simulate",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": undefined,
    },
  ],
]
`;

exports[`claim dep characterization > no-fuel: allow leaves fee to the wallet picker; unverifiable and none fail-stop 1`] = `
{
  "whyNone": "No gas (Fee Juice) to claim this no-fuel bridge. Enable "arrive with gas", or fund your account first.",
  "whyUnver": "Couldn't check your Fee Juice balance - please try again in a moment.",
}
`;

exports[`claim dep characterization > no-fuel: allow leaves fee to the wallet picker; unverifiable and none fail-stop 2`] = `
[
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "aztec.executeUtility.balance_of",
    undefined,
  ],
  [
    "bridge.claim_public.simulate",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": undefined,
    },
  ],
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "aztec.executeUtility.balance_of",
    undefined,
  ],
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "aztec.executeUtility.balance_of",
    undefined,
  ],
]
`;

exports[`claim dep characterization > private fueled, full metadata: claim_private with x1.5 fees; send latches journal-first 1`] = `
[
  [
    "bridge.claim_private.simulate",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": {
          "maxFeesPerGas": {
            "feePerDaGas": "15n",
            "feePerL2Gas": "30n",
          },
          "teardownGasLimits": "[object Object]",
        },
        "paymentMethod": "PrivateMintAndPayFeePaymentMethod",
      },
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000008888",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
          "setupInsufficiency": false,
        },
      },
    ],
  ],
  [
    "bridge.claim_private.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": {
          "maxFeesPerGas": {
            "feePerDaGas": "15n",
            "feePerL2Gas": "30n",
          },
          "teardownGasLimits": "[object Object]",
        },
        "paymentMethod": "PrivateMintAndPayFeePaymentMethod",
      },
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000008888",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "claimTxHash": "0xl2claimtx",
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
          "setupInsufficiency": false,
        },
      },
    ],
  ],
]
`;

exports[`claim dep characterization > private fueled, incomplete metadata: L11 fail-stop (retryable copy when depositTxHash exists) 1`] = `"This private bridge is missing the data needed to claim its gas privately (an older or partially restored record). Only its backup file can restore that - the public gas recovery is deliberately unavailable for private bridges."`;

exports[`claim dep characterization > private fueled: FPC drift and below-floor both fail-stop 1`] = `
{
  "whyDrift": "Private fuel FPC address mismatch (version drift), refusing to claim. Reselect a mode.",
  "whyFloor": "The bridged gas is below the safe claim floor; the private fuel claim can't self-pay.",
}
`;

exports[`claim dep characterization > private fueled: insufficiency throw latches setupInsufficiency and rethrows; other throws latch nothing 1`] = `
[
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000008888",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
          "setupInsufficiency": false,
        },
      },
    ],
  ],
  [
    "bridge.claim_private.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": {
          "maxFeesPerGas": {
            "feePerDaGas": "15n",
            "feePerL2Gas": "30n",
          },
          "teardownGasLimits": "[object Object]",
        },
        "paymentMethod": "PrivateMintAndPayFeePaymentMethod",
      },
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000008888",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
          "setupInsufficiency": true,
        },
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000008888",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
          "setupInsufficiency": false,
        },
      },
    ],
  ],
  [
    "bridge.claim_private.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": {
          "maxFeesPerGas": {
            "feePerDaGas": "15n",
            "feePerL2Gas": "30n",
          },
          "teardownGasLimits": "[object Object]",
        },
        "paymentMethod": "PrivateMintAndPayFeePaymentMethod",
      },
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
]
`;

exports[`claim dep characterization > public fueled, attempt pending: wait fail-stop 1`] = `"fuel claim attempt pending - waiting for its receipt before retrying"`;

exports[`claim dep characterization > public fueled, below floor: sponsored + standalone FJ fires inclusion-gated claim 1`] = `
[
  [
    "bridge.claim_public.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": undefined,
        "paymentMethod": "SponsoredFeePaymentMethod",
      },
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
  [
    "fj.claim.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "500",
        "0x0000000000000000000000000000000000000000000000000000000000006666",
        "0x0000000000000000000000000000000000000000000000000000000000000016",
      ],
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
]
`;

exports[`claim dep characterization > public fueled, fresh: fjwc fee; (BUG PIN) PROPOSED write drops the pre-send claimAttemptAt > fjwc-latch-patches 1`] = `
[
  [
    "0xrec1",
    {
      "fuel": {
        "amount": "1000",
        "claimAttempt": true,
        "claimAttemptAt": 1700000000000,
        "leafIndex": "22",
        "minOutput": "3960",
        "received": "4000",
        "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
        "secretHashHex": "0x7777",
      },
    },
  ],
  [
    "0xrec1",
    {
      "fuel": {
        "amount": "1000",
        "claimAttempt": true,
        "claimTxHash": "0xl2claimtx",
        "leafIndex": "22",
        "minOutput": "3960",
        "received": "4000",
        "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
        "secretHashHex": "0x7777",
      },
    },
  ],
]
`;

exports[`claim dep characterization > public fueled, fresh: fjwc fee; (BUG PIN) PROPOSED write drops the pre-send claimAttemptAt 1`] = `
[
  [
    "bridge.claim_public.simulate",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": undefined,
        "paymentMethod": "FeeJuicePaymentMethodWithClaim",
      },
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "claimAttempt": true,
          "claimAttemptAt": 1700000000000,
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
        },
      },
    ],
  ],
  [
    "bridge.claim_public.send",
    {
      "args": [
        "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "900",
        "0x0000000000000000000000000000000000000000000000000000000000005555",
        "0x000000000000000000000000000000000000000000000000000000000000000b",
      ],
      "fee": {
        "gasSettings": undefined,
        "paymentMethod": "FeeJuicePaymentMethodWithClaim",
      },
      "wait": {
        "waitForStatus": "proposed",
      },
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "claimAttempt": true,
          "claimTxHash": "0xl2claimtx",
          "leafIndex": "22",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
        },
      },
    ],
  ],
]
`;

exports[`deposit() characterization > cold account with zero public AND private FJ blocks a no-fuel deposit 1`] = `
[
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "aztec.executeUtility.balance_of",
    undefined,
  ],
]
`;

exports[`deposit() characterization > private/fueled: bridge-secret salt derivation, zeroed aztecRecipient, FPC fuelRecipient 1`] = `
[
  [
    "l1.read.quote",
    {
      "in": 1000n,
    },
  ],
  [
    "l1.read.quote",
    {
      "in": 2000n,
    },
  ],
  [
    "journal.addRecordVerified",
    [
      {
        "amount": "4000",
        "bridge": "0x2018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "chainId": 11155111,
        "createdAt": 1700000000000,
        "direction": "deposit",
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000001111",
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "minOutput": "3960",
          "secret": "0x0fcf613d28976af6f6f80e667125b11fd2eef01982df49d4319621ff40c56ce9",
          "secretHashHex": "0x2157442e5e5ff7dd6610dd5f17954a681af408c20f66b1ebd67bc18fd8304b17",
        },
        "id": "<id>",
        "isPrivate": true,
        "portal": "0x00000000000000000000000000000000000000bb",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "schema": 2,
        "secret": undefined,
        "secretHashHex": "<id>",
        "updatedAt": 1700000000000,
      },
    ],
  ],
  [
    "journal.markSessionLive",
    [
      "<id>",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "sealing",
      "two Ethereum signatures - encrypt + verify determinism",
    ],
  ],
  [
    "l1.signMessage",
    "Nulo Bridge recovery key v1 — sign to locally encrypt ONE in-fli",
  ],
  [
    "l1.signMessage",
    "Nulo Bridge recovery key v1 — sign to locally encrypt ONE in-fli",
  ],
  [
    "journal.cacheSecret",
    [
      "<id>",
      "0x0000000000000000000000000000000000000000000000000000000000001112",
      {
        "amount": "4000",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "sealerL1": "0xef4d9e1f4e9e2dd9e747b53f4be3d04bfa935f2d",
        "secret": "0x0000000000000000000000000000000000000000000000000000000000001112",
        "v": 2,
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "sealedEnvelope": "<sealed:true>",
        "sealerL1": "0xef4d9e1f4e9e2dd9e747b53f4be3d04bfa935f2d",
      },
    ],
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "approving",
      "first time only: approve Permit2 in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        "0x00000000000000000000000000000000000000cc",
        115792089237316195423570985008687907853269984665640564039457584007913129639935n,
      ],
      "fn": "approve",
      "to": "0x00000000000000000000000000000000000000aa",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "approveTxHash": "0xapprovetx",
      },
    ],
  ],
  [
    "l1.waitReceipt",
    "0xapprovetx",
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.markApproveOutcome",
    [
      "<id>",
      "done",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "signing",
      "sign the bridge intent in your Ethereum wallet - one signature covers swap + deposit",
    ],
  ],
  [
    "l1.signTypedData",
    {
      "domain": {
        "chainId": 11155111,
        "name": "Permit2",
        "verifyingContract": "0x00000000000000000000000000000000000000cc",
      },
      "message": {
        "deadline": 1700000600n,
        "nonce": 302240678275694148452607n,
        "permitted": {
          "amount": 5000n,
          "token": "0x00000000000000000000000000000000000000aa",
        },
        "spender": "0x00000000000000000000000000000000000000dd",
        "witness": {
          "aztecRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 1000n,
          "fuelRecipient": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "fuelSecretHash": "0x2157442e5e5ff7dd6610dd5f17954a681af408c20f66b1ebd67bc18fd8304b17",
          "isPrivate": true,
          "minFuelOutput": 3960n,
          "routeHash": "0xb867a4d119f167818999da2e66c7a62441c56a283aba9c9e302fe6c6f041a3f2",
          "swapTarget": "0x00000000000000000000000000000000000000ee",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 5000n,
        },
      },
      "primaryType": "PermitWitnessTransferFrom",
      "types": {
        "BridgeWitness": [
          {
            "name": "tokenPortal",
            "type": "address",
          },
          {
            "name": "bridgeToken",
            "type": "address",
          },
          {
            "name": "totalAmount",
            "type": "uint256",
          },
          {
            "name": "fuelAmount",
            "type": "uint256",
          },
          {
            "name": "aztecRecipient",
            "type": "bytes32",
          },
          {
            "name": "fuelRecipient",
            "type": "bytes32",
          },
          {
            "name": "tokenSecretHash",
            "type": "bytes32",
          },
          {
            "name": "fuelSecretHash",
            "type": "bytes32",
          },
          {
            "name": "minFuelOutput",
            "type": "uint256",
          },
          {
            "name": "routeHash",
            "type": "bytes32",
          },
          {
            "name": "isPrivate",
            "type": "bool",
          },
          {
            "name": "swapTarget",
            "type": "address",
          },
        ],
        "PermitWitnessTransferFrom": [
          {
            "name": "permitted",
            "type": "TokenPermissions",
          },
          {
            "name": "spender",
            "type": "address",
          },
          {
            "name": "nonce",
            "type": "uint256",
          },
          {
            "name": "deadline",
            "type": "uint256",
          },
          {
            "name": "witness",
            "type": "BridgeWitness",
          },
        ],
        "TokenPermissions": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "amount",
            "type": "uint256",
          },
        ],
      },
    },
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "confirm the fueled deposit in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        {
          "aztecRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 1000n,
          "fuelRecipient": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "fuelSecretHash": "0x2157442e5e5ff7dd6610dd5f17954a681af408c20f66b1ebd67bc18fd8304b17",
          "isPrivate": true,
          "minFuelOutput": 3960n,
          "path": [
            {
              "currency0": "0x0000000000000000000000000000000000000011",
              "currency1": "0x00000000000000000000000000000000000000aa",
              "fee": 500,
              "hooks": "0x0000000000000000000000000000000000000000",
              "tickSpacing": 10,
            },
            {
              "currency0": "0x0000000000000000000000000000000000000000",
              "currency1": "0x0000000000000000000000000000000000000022",
              "fee": 3000,
              "hooks": "0x0000000000000000000000000000000000000000",
              "tickSpacing": 60,
            },
          ],
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 5000n,
          "zeroForOnes": [
            false,
            true,
          ],
        },
        {
          "deadline": 1700000600n,
          "nonce": 302240678275694148452607n,
          "signature": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        },
      ],
      "fn": "bridgeWithFuel",
      "to": "0x00000000000000000000000000000000000000dd",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositTxHash": "0xfueldeposittx",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "waiting for the Ethereum confirmation",
    ],
  ],
  [
    "l1.waitReceipt",
    "0xfueldeposittx",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositL2Block": 42,
        "fuel": {
          "amount": "1000",
          "bridgeSecretSalt": "0x0000000000000000000000000000000000000000000000000000000000001111",
          "fpc": "0x1a6d21ce5fd80137df0e99632a4ca17e58a42dc8f6c08191a96ca8ae907a1bc0",
          "leafIndex": "22",
          "messageHash": "0x3333333333333333333333333333333333333333333333333333333333333333",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0fcf613d28976af6f6f80e667125b11fd2eef01982df49d4319621ff40c56ce9",
          "secretHashHex": "0x2157442e5e5ff7dd6610dd5f17954a681af408c20f66b1ebd67bc18fd8304b17",
        },
        "leafIndex": "21",
        "messageHash": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "sealedEnvelope": "<sealed:true>",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      undefined,
      undefined,
    ],
  ],
  [
    "journal.runDepositClaim",
    "<id>",
  ],
]
`;

exports[`deposit() characterization > private/plain: seal-before-L1 with write-and-verify, derived commit, finalized re-seal 1`] = `
[
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "journal.addRecordVerified",
    [
      {
        "amount": "1000",
        "bridge": "0x2018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "chainId": 11155111,
        "createdAt": 1700000000000,
        "direction": "deposit",
        "id": "<id>",
        "isPrivate": true,
        "portal": "0x00000000000000000000000000000000000000bb",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "schema": 1,
        "secret": undefined,
        "secretHashHex": "<id>",
        "updatedAt": 1700000000000,
      },
    ],
  ],
  [
    "journal.markSessionLive",
    [
      "<id>",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "sealing",
      "two Ethereum signatures - encrypt + verify determinism",
    ],
  ],
  [
    "l1.signMessage",
    "Nulo Bridge recovery key v1 — sign to locally encrypt ONE in-fli",
  ],
  [
    "l1.signMessage",
    "Nulo Bridge recovery key v1 — sign to locally encrypt ONE in-fli",
  ],
  [
    "journal.cacheSecret",
    [
      "<id>",
      "0x0000000000000000000000000000000000000000000000000000000000001111",
      {
        "amount": "1000",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "sealerL1": "0xef4d9e1f4e9e2dd9e747b53f4be3d04bfa935f2d",
        "secret": "0x0000000000000000000000000000000000000000000000000000000000001111",
        "v": 2,
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "sealedEnvelope": "<sealed:true>",
        "sealerL1": "0xef4d9e1f4e9e2dd9e747b53f4be3d04bfa935f2d",
      },
    ],
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "approving",
      "first time only: approve Permit2 in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        "0x00000000000000000000000000000000000000cc",
        115792089237316195423570985008687907853269984665640564039457584007913129639935n,
      ],
      "fn": "approve",
      "to": "0x00000000000000000000000000000000000000aa",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "approveTxHash": "0xapprovetx",
      },
    ],
  ],
  [
    "l1.waitReceipt",
    "0xapprovetx",
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.markApproveOutcome",
    [
      "<id>",
      "done",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "signing",
      "sign the bridge intent in your Ethereum wallet - one signature",
    ],
  ],
  [
    "l1.signTypedData",
    {
      "domain": {
        "chainId": 11155111,
        "name": "Permit2",
        "verifyingContract": "0x00000000000000000000000000000000000000cc",
      },
      "message": {
        "deadline": 1700000600n,
        "nonce": 302240678275694148452607n,
        "permitted": {
          "amount": 1000n,
          "token": "0x00000000000000000000000000000000000000aa",
        },
        "spender": "0x00000000000000000000000000000000000000dd",
        "witness": {
          "aztecRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 0n,
          "fuelRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "fuelSecretHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "isPrivate": true,
          "minFuelOutput": 0n,
          "routeHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "swapTarget": "0x00000000000000000000000000000000000000ee",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 1000n,
        },
      },
      "primaryType": "PermitWitnessTransferFrom",
      "types": {
        "BridgeWitness": [
          {
            "name": "tokenPortal",
            "type": "address",
          },
          {
            "name": "bridgeToken",
            "type": "address",
          },
          {
            "name": "totalAmount",
            "type": "uint256",
          },
          {
            "name": "fuelAmount",
            "type": "uint256",
          },
          {
            "name": "aztecRecipient",
            "type": "bytes32",
          },
          {
            "name": "fuelRecipient",
            "type": "bytes32",
          },
          {
            "name": "tokenSecretHash",
            "type": "bytes32",
          },
          {
            "name": "fuelSecretHash",
            "type": "bytes32",
          },
          {
            "name": "minFuelOutput",
            "type": "uint256",
          },
          {
            "name": "routeHash",
            "type": "bytes32",
          },
          {
            "name": "isPrivate",
            "type": "bool",
          },
          {
            "name": "swapTarget",
            "type": "address",
          },
        ],
        "PermitWitnessTransferFrom": [
          {
            "name": "permitted",
            "type": "TokenPermissions",
          },
          {
            "name": "spender",
            "type": "address",
          },
          {
            "name": "nonce",
            "type": "uint256",
          },
          {
            "name": "deadline",
            "type": "uint256",
          },
          {
            "name": "witness",
            "type": "BridgeWitness",
          },
        ],
        "TokenPermissions": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "amount",
            "type": "uint256",
          },
        ],
      },
    },
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "confirm the deposit in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        {
          "amount": 1000n,
          "aztecRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "isPrivate": true,
          "secretHash": "<id>",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
        },
        {
          "deadline": 1700000600n,
          "nonce": 302240678275694148452607n,
          "signature": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        },
      ],
      "fn": "bridge",
      "to": "0x00000000000000000000000000000000000000dd",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositTxHash": "0xdeposittx",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "waiting for the Ethereum confirmation",
    ],
  ],
  [
    "l1.waitReceipt",
    "0xdeposittx",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "messageHash": "0x1111111111111111111111111111111111111111111111111111111111111111",
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositL2Block": 42,
        "leafIndex": "11",
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "sealedEnvelope": "<sealed:true>",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      undefined,
      undefined,
    ],
  ],
  [
    "journal.runDepositClaim",
    "<id>",
  ],
]
`;

exports[`deposit() characterization > public/fueled: quote gate, witness law, BridgeWithFuel event drives fuel.received 1`] = `
[
  [
    "l1.read.quote",
    {
      "in": 1000n,
    },
  ],
  [
    "l1.read.quote",
    {
      "in": 2000n,
    },
  ],
  [
    "journal.addRecordVerified",
    [
      {
        "amount": "4000",
        "bridge": "0x2018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "chainId": 11155111,
        "createdAt": 1700000000000,
        "direction": "deposit",
        "fuel": {
          "amount": "1000",
          "minOutput": "3960",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000001111",
          "secretHashHex": "0x040dda056179db548d06470e06e5dbcdc977eb8fc5bbd528822c725e7f190156",
        },
        "id": "<id>",
        "isPrivate": false,
        "portal": "0x00000000000000000000000000000000000000bb",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "schema": 2,
        "secret": "0x0000000000000000000000000000000000000000000000000000000000001112",
        "secretHashHex": "<id>",
        "updatedAt": 1700000000000,
      },
    ],
  ],
  [
    "journal.markSessionLive",
    [
      "<id>",
    ],
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "approving",
      "first time only: approve Permit2 in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        "0x00000000000000000000000000000000000000cc",
        115792089237316195423570985008687907853269984665640564039457584007913129639935n,
      ],
      "fn": "approve",
      "to": "0x00000000000000000000000000000000000000aa",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "approveTxHash": "0xapprovetx",
      },
    ],
  ],
  [
    "l1.waitReceipt",
    "0xapprovetx",
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.markApproveOutcome",
    [
      "<id>",
      "done",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "signing",
      "sign the bridge intent in your Ethereum wallet - one signature covers swap + deposit",
    ],
  ],
  [
    "l1.signTypedData",
    {
      "domain": {
        "chainId": 11155111,
        "name": "Permit2",
        "verifyingContract": "0x00000000000000000000000000000000000000cc",
      },
      "message": {
        "deadline": 1700000600n,
        "nonce": 302240678275694148452607n,
        "permitted": {
          "amount": 5000n,
          "token": "0x00000000000000000000000000000000000000aa",
        },
        "spender": "0x00000000000000000000000000000000000000dd",
        "witness": {
          "aztecRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 1000n,
          "fuelRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "fuelSecretHash": "0x040dda056179db548d06470e06e5dbcdc977eb8fc5bbd528822c725e7f190156",
          "isPrivate": false,
          "minFuelOutput": 3960n,
          "routeHash": "0xb867a4d119f167818999da2e66c7a62441c56a283aba9c9e302fe6c6f041a3f2",
          "swapTarget": "0x00000000000000000000000000000000000000ee",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 5000n,
        },
      },
      "primaryType": "PermitWitnessTransferFrom",
      "types": {
        "BridgeWitness": [
          {
            "name": "tokenPortal",
            "type": "address",
          },
          {
            "name": "bridgeToken",
            "type": "address",
          },
          {
            "name": "totalAmount",
            "type": "uint256",
          },
          {
            "name": "fuelAmount",
            "type": "uint256",
          },
          {
            "name": "aztecRecipient",
            "type": "bytes32",
          },
          {
            "name": "fuelRecipient",
            "type": "bytes32",
          },
          {
            "name": "tokenSecretHash",
            "type": "bytes32",
          },
          {
            "name": "fuelSecretHash",
            "type": "bytes32",
          },
          {
            "name": "minFuelOutput",
            "type": "uint256",
          },
          {
            "name": "routeHash",
            "type": "bytes32",
          },
          {
            "name": "isPrivate",
            "type": "bool",
          },
          {
            "name": "swapTarget",
            "type": "address",
          },
        ],
        "PermitWitnessTransferFrom": [
          {
            "name": "permitted",
            "type": "TokenPermissions",
          },
          {
            "name": "spender",
            "type": "address",
          },
          {
            "name": "nonce",
            "type": "uint256",
          },
          {
            "name": "deadline",
            "type": "uint256",
          },
          {
            "name": "witness",
            "type": "BridgeWitness",
          },
        ],
        "TokenPermissions": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "amount",
            "type": "uint256",
          },
        ],
      },
    },
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "confirm the fueled deposit in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        {
          "aztecRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 1000n,
          "fuelRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "fuelSecretHash": "0x040dda056179db548d06470e06e5dbcdc977eb8fc5bbd528822c725e7f190156",
          "isPrivate": false,
          "minFuelOutput": 3960n,
          "path": [
            {
              "currency0": "0x0000000000000000000000000000000000000011",
              "currency1": "0x00000000000000000000000000000000000000aa",
              "fee": 500,
              "hooks": "0x0000000000000000000000000000000000000000",
              "tickSpacing": 10,
            },
            {
              "currency0": "0x0000000000000000000000000000000000000000",
              "currency1": "0x0000000000000000000000000000000000000022",
              "fee": 3000,
              "hooks": "0x0000000000000000000000000000000000000000",
              "tickSpacing": 60,
            },
          ],
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 5000n,
          "zeroForOnes": [
            false,
            true,
          ],
        },
        {
          "deadline": 1700000600n,
          "nonce": 302240678275694148452607n,
          "signature": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        },
      ],
      "fn": "bridgeWithFuel",
      "to": "0x00000000000000000000000000000000000000dd",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositTxHash": "0xfueldeposittx",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "waiting for the Ethereum confirmation",
    ],
  ],
  [
    "l1.waitReceipt",
    "0xfueldeposittx",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositL2Block": 42,
        "fuel": {
          "amount": "1000",
          "leafIndex": "22",
          "messageHash": "0x3333333333333333333333333333333333333333333333333333333333333333",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000001111",
          "secretHashHex": "0x040dda056179db548d06470e06e5dbcdc977eb8fc5bbd528822c725e7f190156",
        },
        "leafIndex": "21",
        "messageHash": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      undefined,
      undefined,
    ],
  ],
  [
    "journal.runDepositClaim",
    "<id>",
  ],
]
`;

exports[`deposit() characterization > public/plain: cold-check passes on public FJ, approve + bridge, hash-before-wait 1`] = `
[
  [
    "fj.balance_of_public.simulate",
    undefined,
  ],
  [
    "journal.addRecordVerified",
    [
      {
        "amount": "1000",
        "bridge": "0x2018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "chainId": 11155111,
        "createdAt": 1700000000000,
        "direction": "deposit",
        "id": "<id>",
        "isPrivate": false,
        "portal": "0x00000000000000000000000000000000000000bb",
        "recipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
        "schema": 1,
        "secret": "0x0000000000000000000000000000000000000000000000000000000000001111",
        "secretHashHex": "<id>",
        "updatedAt": 1700000000000,
      },
    ],
  ],
  [
    "journal.markSessionLive",
    [
      "<id>",
    ],
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "approving",
      "first time only: approve Permit2 in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        "0x00000000000000000000000000000000000000cc",
        115792089237316195423570985008687907853269984665640564039457584007913129639935n,
      ],
      "fn": "approve",
      "to": "0x00000000000000000000000000000000000000aa",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "approveTxHash": "0xapprovetx",
      },
    ],
  ],
  [
    "l1.waitReceipt",
    "0xapprovetx",
  ],
  [
    "l1.read.allowance",
    undefined,
  ],
  [
    "journal.markApproveOutcome",
    [
      "<id>",
      "done",
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "signing",
      "sign the bridge intent in your Ethereum wallet - one signature",
    ],
  ],
  [
    "l1.signTypedData",
    {
      "domain": {
        "chainId": 11155111,
        "name": "Permit2",
        "verifyingContract": "0x00000000000000000000000000000000000000cc",
      },
      "message": {
        "deadline": 1700000600n,
        "nonce": 302240678275694148452607n,
        "permitted": {
          "amount": 1000n,
          "token": "0x00000000000000000000000000000000000000aa",
        },
        "spender": "0x00000000000000000000000000000000000000dd",
        "witness": {
          "aztecRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "fuelAmount": 0n,
          "fuelRecipient": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "fuelSecretHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "isPrivate": false,
          "minFuelOutput": 0n,
          "routeHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "swapTarget": "0x00000000000000000000000000000000000000ee",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
          "tokenSecretHash": "<id>",
          "totalAmount": 1000n,
        },
      },
      "primaryType": "PermitWitnessTransferFrom",
      "types": {
        "BridgeWitness": [
          {
            "name": "tokenPortal",
            "type": "address",
          },
          {
            "name": "bridgeToken",
            "type": "address",
          },
          {
            "name": "totalAmount",
            "type": "uint256",
          },
          {
            "name": "fuelAmount",
            "type": "uint256",
          },
          {
            "name": "aztecRecipient",
            "type": "bytes32",
          },
          {
            "name": "fuelRecipient",
            "type": "bytes32",
          },
          {
            "name": "tokenSecretHash",
            "type": "bytes32",
          },
          {
            "name": "fuelSecretHash",
            "type": "bytes32",
          },
          {
            "name": "minFuelOutput",
            "type": "uint256",
          },
          {
            "name": "routeHash",
            "type": "bytes32",
          },
          {
            "name": "isPrivate",
            "type": "bool",
          },
          {
            "name": "swapTarget",
            "type": "address",
          },
        ],
        "PermitWitnessTransferFrom": [
          {
            "name": "permitted",
            "type": "TokenPermissions",
          },
          {
            "name": "spender",
            "type": "address",
          },
          {
            "name": "nonce",
            "type": "uint256",
          },
          {
            "name": "deadline",
            "type": "uint256",
          },
          {
            "name": "witness",
            "type": "BridgeWitness",
          },
        ],
        "TokenPermissions": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "amount",
            "type": "uint256",
          },
        ],
      },
    },
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "confirm the deposit in your Ethereum wallet",
    ],
  ],
  [
    "l1.writeContract",
    {
      "args": [
        {
          "amount": 1000n,
          "aztecRecipient": "0x1018808f2c17794badb361c02c945582b8198b495a7e8d01154f7eeb7d719c0d",
          "bridgeToken": "0x00000000000000000000000000000000000000aa",
          "isPrivate": false,
          "secretHash": "<id>",
          "tokenPortal": "0x00000000000000000000000000000000000000bb",
        },
        {
          "deadline": 1700000600n,
          "nonce": 302240678275694148452607n,
          "signature": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        },
      ],
      "fn": "bridge",
      "to": "0x00000000000000000000000000000000000000dd",
    },
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositTxHash": "0xdeposittx",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      "depositing",
      "waiting for the Ethereum confirmation",
    ],
  ],
  [
    "l1.waitReceipt",
    "0xdeposittx",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "messageHash": "0x1111111111111111111111111111111111111111111111111111111111111111",
      },
    ],
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "depositL2Block": 42,
        "leafIndex": "11",
      },
    ],
  ],
  [
    "journal.setRecordStep",
    [
      "<id>",
      undefined,
      undefined,
    ],
  ],
  [
    "journal.runDepositClaim",
    "<id>",
  ],
]
`;

exports[`recoverDepositLeg characterization > fee-juice record recovers from DepositToAztecPublic 1`] = `
[
  [
    "l1.getReceipt",
    "0xrecfj",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "leafIndex": "33",
          "minOutput": "3960",
          "received": "4000",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
        },
        "leafIndex": "33",
      },
    ],
  ],
]
`;

exports[`recoverDepositLeg characterization > fueled record recovers token + fuel legs from BridgeWithFuel 1`] = `
[
  [
    "l1.getReceipt",
    "0xrecfueled",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "fuel": {
          "amount": "1000",
          "leafIndex": "52",
          "messageHash": "0x3333333333333333333333333333333333333333333333333333333333333333",
          "minOutput": "3960",
          "received": "4100",
          "secret": "0x0000000000000000000000000000000000000000000000000000000000006666",
          "secretHashHex": "0x7777",
        },
        "leafIndex": "51",
        "messageHash": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    ],
  ],
]
`;

exports[`recoverDepositLeg characterization > pending, reverted, and event-less receipts 1`] = `
[
  [
    "l1.getReceipt",
    "0xrecpending",
  ],
  [
    "l1.getReceipt",
    "0xrecreverted",
  ],
  [
    "l1.getReceipt",
    "0xrecnoevent",
  ],
]
`;

exports[`recoverDepositLeg characterization > plain record recovers its leaf from the Inbox MessageSent fallback 1`] = `
[
  [
    "l1.getReceipt",
    "0xrecplain",
  ],
  [
    "journal.updateRecord",
    [
      "<id>",
      {
        "leafIndex": "61",
      },
    ],
  ],
]
`;
